Aufräumen: Entfernen von Code zum unterstützen des bereits entferneten Quartalsmodus + fixed sonar issues